Adicionado Router e App. Projeto refatorado.
